# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//base/telephony/cellular_call/cellularcall.gni")
CELLULAR_CALL_PATH = "../../.."

ohos_unittest("cellular_call_satellite_callback_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "satellitetest"
  module_out_path = part_name + "/" + part_name + "/" + test_module

  sources = [ "satellite_callback_test.cpp" ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}/test:cellular_call_test_base",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "core_service:ffrt_mocked",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallSatelliteTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  defines += global_defines
}

ohos_unittest("cellular_call_satellite_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "satellitetest"
  module_out_path = part_name + "/" + part_name + "/" + test_module

  sources = [ "satellite_test.cpp" ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}/test:cellular_call_test_base",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "core_service:ffrt_mocked",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallSatelliteTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  defines += global_defines
}

ohos_unittest("cellular_call_satellite_zero_branch_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "satellitetest"
  module_out_path = part_name + "/" + part_name + "/" + test_module

  sources = [ "zero_branch_test.cpp" ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}/test:cellular_call_test_base",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "core_service:ffrt_mocked",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallSatelliteTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  defines += global_defines
}

group("unittest") {
  testonly = true
  deps = [
    ":cellular_call_satellite_callback_test",
    ":cellular_call_satellite_test",
    ":cellular_call_satellite_zero_branch_test",
  ]
}
